Fix flexbox overflow
used min-width:0px

--- a/style.css
+++ b/style.css
@@ -5,15 +5,16 @@
 body{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-items: center;
+    align-items: stretch;
     margin: 0;
+    min-width: 0px;
 }
 
 .contentCard, #mainTitle {
     background-color: beige;
     border-radius: 5px;
     padding: 5px 15px;
-    width: 95%;
     margin: 15px 0px;
 }
 
@@ -36,12 +37,15 @@ h2 {
 .content {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    flex: 5;
+    justify-self: center;
+    align-items: stretch;
     background-color: tan;
     padding: 2%;
     padding-top: 0;
     padding-bottom: 0;
+    min-width: 0px;
+    flex-shrink: 1;
+    flex-basis: 1200px;
 }
 
 
@@ -56,18 +60,17 @@ h2 {
     border-radius: 5px;
     padding: 30px;
     text-indent: 0;
-    width: 100%;
 }
 
 .recipeImageContainer{
+    flex:1;
     display: flex;
     flex-direction: column;
-
+    min-width: 0px;
 }
 
 img {
-    max-width: 100%;
-    max-height: 100%;
+    flex: 0;
     object-fit: contain;
     margin-bottom: 10px;
 }
@@ -95,6 +98,6 @@ a:hover{
 }
 
 .sidebar {
-    width: 200px;
+    flex-basis: 200px;
     flex: 1;
 }
